# TransportInheritance

./: CMakeLists.txt
include/: Airplane.h  Bicycle.h  Car.h  Ship.h  Tank.h  Transport.h  Truck.h
src/: Airplane.cpp  Bicycle.cpp  Car.cpp  Ship.cpp  Tank.cpp  Transport.cpp  Truck.cpp  main.cpp
